--- a/pom.xml
+++ b/pom.xml
@@ -2,21 +2,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-<!-- 
-	<parent>
-		<groupId>org.contentmine</groupId>
-		<artifactId>cm-parent</artifactId>
-		<version>6</version>
-	</parent>
--->
-
 	<groupId>org.contentmine</groupId>
 	<artifactId>euclid</artifactId>
-	<version>2</version>
+	<version>2.0.1</version>
  	<packaging>jar</packaging>
 
     <properties>
        <guava.version>18.0</guava.version>
+       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
 
@@ -71,62 +64,6 @@
 
 	<build>
 		<plugins>
-			<plugin>
-				<artifactId>maven-source-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<configuration>
-					<check>
-						<haltOnFailure>false</haltOnFailure>
-						<regexes>
-							<regex>
-								<pattern>org.contentmine.*</pattern>
-								<branchRate>80</branchRate>
-								<lineRate>80</lineRate>
-							</regex>
-						</regexes>
-					</check>
-					<instrumentation>
-						<includes>
-							<include>org/xmlcml/**/*.class</include>
-						</includes>
-					</instrumentation>
-				</configuration>
-				<executions>
-					<execution>
-						<id>clean</id>
-						<phase>pre-site</phase>
-						<goals>
-							<goal>clean</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>instrument</id>
-						<phase>site</phase>
-						<goals>
-							<goal>instrument</goal>
-							<goal>cobertura</goal>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>com.mycila.maven-license-plugin</groupId>
-				<artifactId>maven-license-plugin</artifactId>
-				<configuration>
-					<header>src/main/resources/header.txt</header>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
 <!-- remove <repositories> for releases to central -->
