--- a/pom.xml
+++ b/pom.xml
@@ -2,21 +2,21 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-<parent>
-    <groupId>org.contentmine</groupId>
-    <artifactId>cm-parent</artifactId>
-    <version>7.0.3</version>
-</parent>
-
-    <groupId>org.contentmine</groupId>
-    <artifactId>euclid</artifactId>
-    <version>2.0.3</version>
+    <parent>
+        <groupId>org.contentmine</groupId>
+        <artifactId>cm-parent</artifactId>
+        <version>7.0.3</version>
+    </parent>
 
     <properties>
+       <euclid.version>2.0.4</euclid.version>
        <guava.version>18.0</guava.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
+    
+    <groupId>org.contentmine</groupId>
+    <artifactId>euclid</artifactId>
+    <version>${euclid.version}</version>
 
     <name>Euclid</name>
     <description>A Java library for 2D and 3D geometric calculations forked from WWMM</description>
