--- a/pom.xml
+++ b/pom.xml
@@ -2,32 +2,24 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <properties>
+       <euclid.version>2.0.5</euclid.version>
+       <guava.version>18.0</guava.version>
+    </properties>
+
     <parent>
         <groupId>org.contentmine</groupId>
         <artifactId>cm-parent</artifactId>
-        <version>7.0.3</version>
+        <version>7.0.4</version>
     </parent>
-
-    <properties>
-       <euclid.version>2.0.4</euclid.version>
-       <guava.version>18.0</guava.version>
-       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
     
     <groupId>org.contentmine</groupId>
     <artifactId>euclid</artifactId>
-    <version>${euclid.version}</version>
-
+    <version>2.0.5</version>
     <name>Euclid</name>
     <description>A Java library for 2D and 3D geometric calculations forked from WWMM</description>
     <url>http://contentmine.org/euclid</url>
-    <licenses>
-        <license>
-            <name>Apache License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
+    
     <developers>
         <developer>
             <id>pm286</id>
@@ -37,16 +29,15 @@
 
     <inceptionYear>1994-2017</inceptionYear>
 
-    <organization>
-        <name>Peter Murray-Rust</name>
-        <url>http://contentmine.org </url>
-    </organization>
-
     <build>
         <plugins>
+               <plugin>
+                <groupId>ch.elca.el4j.maven.plugins</groupId>
+                <artifactId>depgraph-maven-plugin</artifactId>
+                <version>3.1</version>
+            </plugin>
         </plugins>
     </build>
-    
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -118,16 +109,6 @@
         </profile>
     </profiles>
 -->
-    <reporting>
-        <plugins>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-            </plugin>
-
-        </plugins>
-    </reporting>
 
     <repositories>
     <repository>
