--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <properties>
-       <euclid.version>2.2.1-SNAPSHOT</euclid.version>
        <guava.version>18.0</guava.version>
+       <commons-io.version>2.5</commons-io.version>
+       <log4j.version>1.2.16</log4j.version>
+       <commons-lang3.version>3.0</commons-lang3.version>
+       <commons-math.version>2.2</commons-math.version>
+	   <commons-csv.version>1.2</commons-csv.version>
+	   <joda-time.version>1.6.2</joda-time.version>
+	   <xom.version>1.2.5</xom.version>
+	   <junit.version>4.8.2</junit.version>
     </properties>
 
     <parent>
@@ -15,7 +22,7 @@
     
     <groupId>org.contentmine</groupId>
     <artifactId>euclid</artifactId>
-    <version>${euclid.version}</version>
+    <version>2.2.1-SNAPSHOT</version>
     <name>Euclid</name>
     <description>A Java library for 2D and 3D geometric calculations forked from WWMM</description>
     <url>http://contentmine.org/euclid</url>
@@ -31,18 +38,20 @@
 
     <build>
         <plugins>
+        <!-- 
                <plugin>
                 <groupId>ch.elca.el4j.maven.plugins</groupId>
                 <artifactId>depgraph-maven-plugin</artifactId>
                 <version>3.1</version>
             </plugin>
+            -->
         </plugins>
     </build>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.8.2</version>
+            <version>${junit.version}</version>
             <!--
             <scope>test</scope>
             -->
@@ -51,41 +60,41 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.0.1</version>
+            <version>${commons-io.version}</version>
         </dependency>
 
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.16</version>
+            <version>${log4j.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.0</version>
+            <version>${commons-lang3.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-math</artifactId>
-            <version>2.2</version>
+            <version>${commons-math.version}</version>
         </dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-csv</artifactId>
-			<version>1.2</version>
+			<version>${commons-csv.version}</version>
 		</dependency>
 
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
-            <version>1.6.2</version>
+            <version>${joda-time.version}</version>
         </dependency>
 
            <dependency>
             <groupId>xom</groupId>
             <artifactId>xom</artifactId>
-            <version>1.2.5</version>
+            <version>${xom.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -94,26 +103,6 @@
         </dependency>
 
     </dependencies>
-
-<!--
-    <profiles>
-        <profile>
-            <id>release</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-assembly-plugin</artifactId>
-                        <configuration>
-                            <descriptorRefs>
-                                <descriptorRef>src</descriptorRef>
-                            </descriptorRefs>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
--->
 
     <repositories>
     <repository>
